--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_maps_flutter: ^2.6.1
   geolocator: ^12.0.0
   geocoding: ^3.0.0
+  another_flutter_splash_screen: ^1.2.0
 
 dev_dependencies:
   flutter_test:
