--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geolocator: ^12.0.0
   geocoding: ^3.0.0
   another_flutter_splash_screen: ^1.2.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
